# fastener_label_generator

./: .gitignore  README.md  fastener_label_generator.py  item_template.html  pyproject.toml  style.css
fastener_label_generator/: __init__.py  cli.py  generator.py
fastener_label_generator/assets/styles/: martyna-bolt.css
fastener_label_generator/assets/templates/: franek.html  martyna.html
